--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.0",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.5.1",
+    "motion": "^10.14.3",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "react-icons": "^4.6.0",
+    "react-otp-input": "^2.4.0",
+    "react-phone-number-input": "^3.2.12",
+    "typescript": "4.9.3",
+    "yup": "^0.32.11"
   }
 }
