--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flags-select": "^2.2.3",
     "react-icons": "^4.6.0",
     "react-otp-input": "^2.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.12",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
