--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@reduxjs/toolkit": "^1.9.0",
+    "@trendyol-js/react-carousel": "^3.0.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -21,8 +22,8 @@
     "framer-motion": "^6.5.1",
     "motion": "^10.14.3",
     "next": "13.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-icons": "^4.6.0",
     "react-otp-input": "^2.4.0",
