--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "next": "13.0.5",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.12",
     "react-qr-code": "^2.0.8",
+    "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.7",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
   }
