--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.0",
+    "device-detector-js": "^3.0.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "ip": "^1.1.8",
     "motion": "^10.14.3",
     "next": "13.0.5",
     "react": "^18.2.0",
@@ -36,6 +38,7 @@
     "react-redux": "^8.0.5",
     "react-spinners": "^0.13.7",
     "typescript": "4.9.3",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
   }
 }
