--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-phone-number-input": "^3.2.12",
     "react-qr-code": "^2.0.8",
     "react-redux": "^8.0.5",
+    "react-select": "^5.7.0",
     "react-spinners": "^0.13.7",
     "typescript": "4.9.3",
     "uuid": "^9.0.0",
