--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^8.0.5",
     "react-select": "^5.7.0",
     "react-spinners": "^0.13.7",
+    "tawkto-react": "^3.0.1",
     "typescript": "4.9.3",
     "uuid": "^9.0.0",
     "yup": "^0.32.11"
