--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "react-phone-number-input": "^3.2.12",
     "react-qr-code": "^2.0.8",
     "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.7.0",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.7",
+    "redux-persist": "^6.0.0",
     "tawkto-react": "^3.0.1",
     "typescript": "4.9.3",
     "uuid": "^9.0.0",
